minor css: fixed selection component to keep a fixed sizes so it looks less wonky. fixed minor bug where selection component was not centered when recipe component is not displayed.

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -11,7 +11,7 @@
   flex-wrap: wrap;
   gap: 1rem;
   padding: 1rem;
-  max-width: 70%;
+  width: 70%;
   margin: 0 auto;
   flex: 1; // grows body to push footer down
 }
@@ -20,8 +20,12 @@
   flex: 0 0 25%;
 }
 
+.body-cards.no-recipe .recipe-component {
+  display: none;
+}
+
 .recipe-component {
-  flex: 0 0 1;
+  flex: 1;
 }
 
 @media (min-width: 1024px) {
